--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,6 @@ background-size:cover;
 .sidebarContainer .ps-menu-root .css-ewdv3l{
     text-align: center;
 }
+.content{
+    background-image: url("./assets/image/Rectangle.png");
+}
