--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,24 @@
 .share_bg{
     background-image: url(./assets/image/03c0eeec-32a6-4f53-bf12-5671ac4bdd55.jpg);
 background-size:cover;
+background-position: center center;
 }
 .overlay{
     background:linear-gradient(45deg,rgba(37, 142, 97,.4),rgba(0,0,0,.5));
-    
+   width: 100%;
+   height: 100%;
 }
 /* <######################sidebar####################> */
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .sidebarContainer .ps-sidebar-container{
     background-color: #0b0b0b;
     color: white !important;
-    height: 200vh;
+    height: 160vh;
     border-top-right-radius: 70px;
 }
 .sidebarContainer .ps-sidebar-container .ps-menu-button:hover{
@@ -30,7 +36,7 @@ background-size:cover;
 color: aliceblue;
 }
 /* <######################favourit####################> */
-.fa-eye{
+.deleteFav{
     position: absolute;
     top: 5px;
     right: 5px;
@@ -81,3 +87,7 @@ background-color: aliceblue;
     border-radius: 10px; /* Add rounded corners */
     padding: 8px; 
 }
+/* .iconTogle-login{
+    margin-top: 60px;
+    margin-left: -30px;
+} */
